--- a/src/main/resources/graphics/MainWindow.fxml
+++ b/src/main/resources/graphics/MainWindow.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainWindowController">
     <top>
         <StackPane BorderPane.alignment="CENTER">
             <children>
@@ -158,31 +158,91 @@
                         <Insets />
                     </VBox.margin>
                 </GridPane>
-                <GridPane hgap="5.0" styleClass="background">
+                <!-- Updated Objective Quality Section without colored borders -->
+                <GridPane style="-fx-padding: 10px;">
                     <columnConstraints>
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                    <VBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                    </VBox.margin>
                     <children>
-                        <Button mnemonicParsing="false" onAction="#countQuality" prefWidth="100.0" text="Count" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MSE" GridPane.rowIndex="1" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="PSNR" GridPane.rowIndex="2" />
-                        <TextField fx:id="qualityMSE" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="qualityPSNR" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Objective quality" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Text>
+
+                        <Button fx:id="countPSNRButton" mnemonicParsing="false" onAction="#countQuality" text="Count PSNR" GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets bottom="5.0" />
+                            </GridPane.margin>
+                        </Button>
+
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MSE" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MAE" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+
+                        <HBox alignment="CENTER" spacing="5.0" GridPane.rowIndex="2">
+                            <children>
+                                <ComboBox fx:id="qualityType" prefWidth="100.0" />
+                            </children>
+                            <GridPane.margin>
+                                <Insets top="5.0" />
+                            </GridPane.margin>
+                        </HBox>
+
+                        <TextField fx:id="qualityMSE" editable="false" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="qualityMAE" editable="false" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="PSNR|SAE" GridPane.rowIndex="3" />
+                        <TextField fx:id="qualityPSNR" editable="false" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="qualitySAE" editable="false" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                     </children>
+                    <VBox.margin>
+                        <Insets bottom="5.0" />
+                    </VBox.margin>
+                </GridPane>
+
+                <!-- SSIM Section without colored border -->
+                <GridPane prefHeight="98.0" prefWidth="400.0" style="-fx-padding: 10px;">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button fx:id="countSSIMButton" mnemonicParsing="false" onAction="#countSSIM" text="Count SSIM">
+                            <GridPane.margin>
+                                <Insets bottom="5.0" />
+                            </GridPane.margin>
+                        </Button>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SSIM" GridPane.columnIndex="1" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MSSIM" GridPane.columnIndex="2" />
+
+                        <HBox alignment="CENTER" spacing="5.0" GridPane.rowIndex="1">
+                            <children>
+                                <ComboBox fx:id="ssimQualityType" prefWidth="100.0" />
+                            </children>
+                            <GridPane.margin>
+                                <Insets top="5.0" />
+                            </GridPane.margin>
+                        </HBox>
+
+                        <TextField fx:id="qualitySSIM" editable="false" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="qualityMSSIM" editable="false" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="5.0" />
+                    </VBox.margin>
                 </GridPane>
                 <GridPane alignment="CENTER" hgap="5.0" layoutX="10.0" layoutY="10.0" styleClass="background" vgap="5.0">
                     <columnConstraints>
