--- a/src/main/resources/graphics/MainWindow.fxml
+++ b/src/main/resources/graphics/MainWindow.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.MainWindowController">
     <top>
         <StackPane BorderPane.alignment="CENTER">
             <children>
@@ -280,6 +280,14 @@
             <padding>
                 <Insets bottom="5.0" />
             </padding>
+            <!-- Add this at the end of the VBox in the center element of the BorderPane -->
+            <HBox alignment="CENTER" spacing="10.0" styleClass="background" VBox.vgrow="NEVER">
+                <padding>
+                    <Insets bottom="15.0" top="5.0" />
+                </padding>
+                <Button fx:id="compareButton" mnemonicParsing="false" onAction="#openComparisonWindow"
+                        prefWidth="250.0" text="Compare" />
+            </HBox>
         </VBox>
     </center>
 </BorderPane>
